Updates to java 22 and springboot 3.3